--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Intro to Time and Space Complexity</h1>
+	<p>
+		Time complexity is a function that describes how long an algorithm
+		takes in terms of the quantity of input it receives, 
+		and should be solved in more efficient.
+	</p>
+	<p>
+		<b>Space complexity</b> refers to the total amount of memory space used by an algorithm,
+		and it is denoted as O(n).
+	</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
