--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Time, Space, Complexity</h1>
-	<p>Tn terms of the quantity of input it receives, and should be solved in more efficient</p>
+	<p>In terms of the quantity of input it receives, and should be solved in more efficient</p>
 	<p><b>Space complexity</b> refers to the total amount of memory space used by an algorithm, and it is denoted as O(n)</p>
     <script type="text/javascript" src="./script.js">
 </script>
